--- a/Task1/app/src/main/AndroidManifest.xml
+++ b/Task1/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         <activity
             android:name=".Main"
             android:label="@string/toolbar_title"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
