--- a/Task1/app/src/main/AndroidManifest.xml
+++ b/Task1/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Main"
+            android:name=".DetailTaskActivity"
             android:label="@string/toolbar_title"
             android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="orientation"
